# astaire-legacy

./: .autotools  .cproject  .gitignore  .project  .travis.yml  AUTHORS  COPYING  Dockerfile.arch  Dockerfile.u16.04  Dockerfile.u18.04  Dockerfile.u18.10  NEWS  README  README.md  conf.json  configure.ac
ci/docker/: Dockerfile.u16.04  Dockerfile.u18.04
src/: Astaire.cpp  Makefile  Makefile.am  common.mk
src/connection/: ConnectionManager.cpp  ConnectionManager.h  Packet.cpp  Packet.h  Tunnel.cpp  Tunnel.h  tuntap++.cpp  tuntap++.h
src/handler/: Handler.cpp  Handler.h  HelloWorldHandler.cpp  HelloWorldHandler.h  JavaHandler.cpp  JavaHandler.h
src/utils/: HandlerUtils.cpp  HandlerUtils.h  JsonUtils.cpp  JsonUtils.h
