bin_PROGRAMS=astaire
astaire_SOURCES=Astaire.cpp \
                connection/ConnectionManager.cpp \
                connection/Packet.cpp \
                handler/Handler.cpp \
                handler/JavaHandler.cpp \
                utils/JsonUtils.cpp \
                utils/HandlerUtils.cpp
astaire_LDADD=$(astaire_LIBS)
astaire_CXXFLAGS=$(astaire_CUSTOMFLAGS)